# IOCShuttle

./: README.md  config.toml  main.py  pyproject.toml
src/common/: __init__.py
src/ioc/: __init__.py
src/transit/: __init__.py  crowdstrikedestination.py  edldestination.py  taxii21source.py
state/: .gitignore
